# adinkra-math-pypi

./: .gitignore  AGENT.md  README.md  pyproject.toml
src/adinkramath/: __init__.py  encoding.py  glyph.py  supersymmetry.py  symbol.py  topology.py
tests/: test_all.py
